Fixed sections spacing

--- a/src/components/sections/courseStructure/CourseStructure.module.scss
+++ b/src/components/sections/courseStructure/CourseStructure.module.scss
@@ -3,11 +3,11 @@
 
 .structure {
     // border: 1px solid green;
-    min-height: 100vh;
-    padding-top: 5.5rem;
+    min-height: 70vh;
+    padding: 5.5rem 0 3rem 0;
     position: relative;
     @media only screen and (min-width: $size-large) {
-        min-height: 70vh;
+        min-height: 50vh;
     }
     @media only screen and (min-height: $size-large) and (min-width: $size-medium) {
         min-height: 50vh;
@@ -22,6 +22,7 @@
         @media only screen and (min-width: $size-large) {
             flex-direction: row;
             justify-content: center;
+            min-height: 5rem;
         } 
     }
     &__conjunction{
@@ -33,10 +34,6 @@
         &_point {
             list-style: none;
             margin-top: 1.5rem;
-            // line-height: 2rem;
-            // @media only screen and (min-height: $size-large) and (min-width: $size-medium) {
-            //     margin-top: 3rem;
-            // }
             &::before {
                 content:'';
                 display: inline-block;
