--- a/src/components/sections/currentMaterial/CurrentMaterial.module.scss
+++ b/src/components/sections/currentMaterial/CurrentMaterial.module.scss
@@ -6,7 +6,10 @@
     @include sections_layout;
     @media only screen and (min-height: $size-large) and (min-width: $size-medium) {
         height: 50vh;
-    }  
+    } 
+    @media only screen and (min-width: $size-large) {
+        min-height: 40vh
+    } 
     &__content {
         @media only screen and (min-width: $size-large) {
             @include sections_content
