--- a/src/components/sections/offer/Offer.module.scss
+++ b/src/components/sections/offer/Offer.module.scss
@@ -3,13 +3,11 @@
 
 .offer {
     // border: 1px solid red;
-    min-height: 100vh;
+    min-height: 40vh;
     padding-top: 5.5rem;
     position: relative;
-
     @media only screen and (min-width: $size-large) {
         padding-top: 6rem;
-        min-height: 60vh;
     }  
     @media only screen and (min-height: $size-large) and (min-width: $size-medium) {
         min-height: 30vh;
